--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,52 +3,7 @@
     --white-color: #FFF;
     --light-gray-color: #eee;
     --gap: 3rem;
-}
-*{
-    margin: 0;
-    padding: 0;
-}
-
-html{
-    font-size: 62.5%;
-}
-body{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 2rem;
-    color: var(--primary-color);
-}
-
-a{
-    text-decoration: none;
-}
-
-h1, h2, h3, h4, h5, h6{
-    font-family: 'Montserrat', sans-serif;
-}
-
-h1{
-    font-size: 6rem;
-    text-transform: uppercase;
-}
-
-h2{
-    font-size: 5.5rem;
-}
-
-h3{
-    font-size: 5rem;
-}
-
-h4{
-    font-size: 4.5rem;
-}
-
-h5{
-    font-size: 4rem;
-}
-
-h6{
-    font-size: 3.5rem;
+    --secondary-color: crimson;
 }
 
 .main-bg{
@@ -63,7 +18,7 @@ h6{
 }
 
 .main-content{
-    max-width: 1200px;
+    max-width: 120rem;
     margin: 0 auto;
     padding: var(--gap);
 }
@@ -74,13 +29,17 @@ h6{
 }
 
 .menu{
-    background-color: white;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     width: 100%;
-    border-bottom: 1px solid var(--light-gray-color);
+    z-index: 1;
+    border-bottom: 0.1rem solid var(--light-gray-color);
+}
+
+.menu-spacing{
+    height: 65px;
 }
 
 .menu-content{
@@ -101,7 +60,6 @@ h6{
 }
 
 .menu h1 a{
-    font-size: 2.3rem;
     color: inherit;
 }
 
@@ -120,11 +78,38 @@ h6{
     left: 50%;
     width: 0;
     height: 0.2rem;
-    background: crimson;
+    background: var(--secondary-color);
     transition: all 300ms ease-in-out;
 }
 
 .menu ul li a:hover::after{
     left: 25%;
     width: 50%;
+}
+
+.intro-content{
+    position: relative;
+    top: -8rem;
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    gap: var(--gap);
+    height: 100vh;
+}
+
+.intro-text, .intro-img{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+}
+
+.intro-text h2{
+    font-size: 6rem;
+    line-height: 1.2;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+}
+
+.intro-img img{
+    max-width: 100%;
+    height: auto;
 }
