--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -5,6 +5,7 @@
 
 html{
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 body{
     font-family: 'Open Sans', sans-serif;
@@ -47,4 +48,8 @@ h5{
 
 h6{
     font-size: 3.5rem;
+}
+
+p {
+    margin-bottom: 3rem;
 }
