--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
 
 .white-bg{
     background: var(--white-color);
+    color: var(--primary-color);
 }
 
 .main-content{
@@ -89,7 +90,6 @@
 
 .intro-content{
     position: relative;
-    top: -8rem;
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     gap: var(--gap);
@@ -112,4 +112,13 @@
 .intro-img img{
     max-width: 100%;
     height: auto;
+}
+
+.top3-content{
+    max-width: 64rem;
+    display: flex;
+    flex-flow: column wrap;
+    height: 100vh;
+    justify-content:center;
+    text-align: center;
 }
