--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@
 .main-content{
     max-width: 120rem;
     margin: 0 auto;
-    padding: 8rem var(--gap);
+    padding: 10rem var(--gap);
 }
 
 
@@ -109,7 +109,7 @@
     text-transform: uppercase;
 }
 
-.intro-img img{
+.intro-img img, .intro-img svg{
     max-width: 100%;
     height: auto;
 }
@@ -161,4 +161,81 @@
     top: -4rem;
     left:-2rem;
     transform: rotate(5deg);
+}
+.gallery-img{
+    width: 100%;
+    max-width: 36rem;
+    max-height: 36rem;
+    overflow: hidden;
+}
+
+.gallery-img img{
+    transition: all 300ms ease-in-out;
+}
+
+.gallery-img img:hover{
+    transform: translate(-3%, 3%) scale(1.2);
+}
+
+.responsive-table{
+    overflow: hidden;
+    overflow-x: auto;
+}
+
+.contact-form{
+    grid-column: span 2;
+}
+
+.contact-form .form-grid{
+    border: none;
+    display: flex;
+    flex-flow: row wrap;
+    gap: var(--gap);
+}
+
+.form-group{
+    flex: 1 1 32rem;
+}
+
+.form-group label{
+    display: block;
+}
+
+.form-group input, .form-group textarea{
+    border: none;
+    background-color: white;
+    padding: 1.5rem 2rem;
+    width: 100%;
+}
+
+.full-width{
+    width: 100%;
+    flex: 1 1 100%;
+}
+
+.form-group button{
+    border: 0.5rem solid white;
+    color: white;
+    padding: 1.5rem 2rem;
+    background: none;
+    font-size: 3rem;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+
+.form-group button:hover{
+    border: 0.5rem solid var(--primary-color);
+    background: white;
+    color: #0A1128;
+}
+
+.footer{
+    text-align: center;
+    font-size: 1.6rem;
+}
+
+.footer p{
+    margin: 0;
+    padding: 3rem;
+    color: #0A1128;
 }
